# oxillama

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  oxillama.1
.cargo/: config.toml
crates/oxillama/: Cargo.toml  README.md  RECIPES.md  TODO.md
crates/oxillama-arch/: Cargo.toml  README.md  TODO.md
crates/oxillama-arch/src/: config.rs  error.rs  lib.rs  registry.rs  traits.rs
crates/oxillama-arch/src/bloom/: config.rs  mod.rs  model.rs
crates/oxillama-arch/src/command_r/: mod.rs  model.rs
crates/oxillama-arch/src/common/: alibi.rs  attention.rs  gelu.rs  layer_norm.rs  linear.rs  mla.rs  mod.rs  moe.rs  mrope.rs  rms_norm.rs  rope.rs  sequence_state.rs  swiglu.rs
crates/oxillama-arch/src/dbrx/: config.rs  mod.rs  model.rs
crates/oxillama-arch/src/deepseek/: mod.rs  model.rs  moe.rs
crates/oxillama-arch/src/falcon/: config.rs  forward.rs  mod.rs  tensor_names.rs
crates/oxillama-arch/src/gemma/: mod.rs  model.rs
crates/oxillama-arch/src/gpt_neox/: mod.rs  model.rs
crates/oxillama-arch/src/granite/: mod.rs  model.rs
crates/oxillama-arch/src/grok/: config.rs  mod.rs  model.rs
crates/oxillama-arch/src/internlm3/: mod.rs  model.rs
crates/oxillama-arch/src/jamba/: config.rs  mod.rs  model.rs
crates/oxillama-arch/src/llama/: mod.rs  model.rs
crates/oxillama-arch/src/llava/: mod.rs  model.rs
crates/oxillama-arch/src/llava_next/: mod.rs  model.rs  tiler.rs
crates/oxillama-arch/src/lora/: adapter.rs  loader.rs  mod.rs  stack.rs
crates/oxillama-arch/src/mamba2/: conv.rs  mod.rs  model.rs  ssm.rs
crates/oxillama-arch/src/minicpm/: config.rs  forward.rs  mod.rs  tensor_names.rs
crates/oxillama-arch/src/mistral/: mod.rs  model.rs
crates/oxillama-arch/src/mixtral/: mod.rs  model.rs
crates/oxillama-arch/src/olmo2/: config.rs  forward.rs  mod.rs  tensor_names.rs
crates/oxillama-arch/src/phi/: mod.rs  model.rs
crates/oxillama-arch/src/phi_moe/: config.rs  mod.rs  model.rs
crates/oxillama-arch/src/qwen2_vl/: mod.rs  model.rs  vision.rs
crates/oxillama-arch/src/qwen3/: mod.rs  model.rs
crates/oxillama-arch/src/reference/: forward.rs  loader.rs  mod.rs
crates/oxillama-arch/src/stablelm/: config.rs  mod.rs  model.rs
crates/oxillama-arch/src/starcoder/: mod.rs  model.rs
crates/oxillama-arch/src/yi/: mod.rs  model.rs
crates/oxillama-arch/tests/: arch_fuzz.rs  dbrx.rs  deepseek.rs  deepseek_v3.rs  grok.rs  jamba.rs  mamba2.rs  reference_diff.rs
crates/oxillama-bench/: Cargo.toml  README.md  TODO.md
crates/oxillama-bench/benches/: batch_heatmap.rs  cross_simd.rs  dispatch_matrix.rs  end_to_end.rs  kv_cache.rs  long_context.rs  memory.rs  memory_profile.rs  power.rs  speculative.rs  tokenizer.rs
crates/oxillama-bench/src/: arch_config.rs  dispatch_matrix.rs  e2e.rs  heatmap.rs  latency.rs  lib.rs  long_context.rs  memory.rs  memory_profiler.rs  power.rs  prefill_decode.rs  regression_gate.rs  simd_comparison.rs  speculative.rs  throughput.rs
crates/oxillama-cli/: Cargo.toml  README.md  TODO.md
crates/oxillama-cli/src/: config.rs  convert.rs  exit_codes.rs  hub.rs  main.rs  quantize.rs  session.rs  tokenize.rs  verify.rs
crates/oxillama-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs  widgets.rs
crates/oxillama-cli/tests/: cli_smoke.rs
crates/oxillama-gguf/: Cargo.toml  README.md  TODO.md
crates/oxillama-gguf/src/: error.rs  header.rs  http_source.rs  integrity.rs  lib.rs  loader.rs  metadata.rs  parser.rs  quantize_on_load.rs  reader.rs  reader_core.rs  resume.rs  safetensors.rs  schema.rs  sharded.rs  source.rs  streaming.rs  tensor_info.rs  test_utils.rs  types.rs  writer.rs
crates/oxillama-gguf/tests/: quantize_on_load.rs  resume.rs  sharded.rs
crates/oxillama-gpu/: Cargo.toml  README.md  TODO.md
crates/oxillama-gpu/src/: buffer.rs  context.rs  error.rs  lib.rs
crates/oxillama-gpu/tests/: shader_validation.rs
crates/oxillama-py/: Cargo.toml  README.md  TODO.md  pyproject.toml
crates/oxillama-py/docs/: api.rst  conf.py  index.rst  progress.rst  quickstart.rst  requirements.txt  snapshot.rst
crates/oxillama-py/src/: async_support.rs  callback.rs  cancel.rs  chat_template.rs  dlpack.rs  engine.rs  error.rs  hub.rs  lib.rs  lora.rs  sampler.rs  snapshot.rs  speculative.rs  tokenizer.rs  torch_interop.rs
crates/oxillama-quant/: Cargo.toml  README.md  TODO.md
crates/oxillama-quant/benches/: quant_kernels.rs  quant_shapes.rs
crates/oxillama-quant/src/: dispatch.rs  error.rs  lib.rs  lora.rs  parallel.rs  quantize.rs  traits.rs  types.rs
crates/oxillama-runtime/: Cargo.toml  README.md  TODO.md
crates/oxillama-runtime/benches/: sampling.rs
crates/oxillama-runtime/src/: batched_attention.rs  beam_search.rs  embedding.rs  engine.rs  error.rs  flash_attention.rs  kv_pool.rs  lib.rs  lora_loader.rs  metrics.rs  scheduler.rs  sequence_pool.rs  snapshot.rs  speculative.rs  speculative_async.rs  tokenizer_bridge.rs  tool_dispatch.rs
crates/oxillama-runtime/tests/: snapshot.rs
crates/oxillama-server/: Cargo.toml  README.md  TODO.md
crates/oxillama-server/src/: app.rs  auth.rs  batch.rs  body_limit.rs  config.rs  error.rs  files_store.rs  lib.rs  metrics.rs  queue.rs  rate_limit.rs  responses_store.rs  shutdown.rs  sse.rs  state.rs  test_helpers.rs  tracing_layer.rs  worker.rs  ws.rs
crates/oxillama-wasm/: Cargo.toml  README.md  TODO.md  build.rs
crates/oxillama-wasm/examples/: service_worker_demo.html
crates/oxillama-wasm/src/: gpu_bridge.rs  idb_cache.rs  lib.rs  service_worker.rs  simd_check.rs  streaming_load.rs  streaming_loader.rs  webgpu.rs  worker.rs
crates/oxillama-wasm/tests/: mobile_matrix_doc.md
crates/oxillama/examples/: 01_load_model.rs  02_inference.rs  03_streaming.rs  04_lora.rs  05_speculative.rs  06_metrics.rs  gpu_enabled.rs  load_and_generate.rs  lora_apply.rs  openai_server.rs  python_bridge.rs  speculative.rs
crates/oxillama/src/: lib.rs
crates/oxillama/tests/: error_types.rs  feature_matrix.rs  recipes_doctest.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: gguf_from_bytes.rs  gguf_header_parse.rs  gguf_metadata_arbitrary.rs  gguf_parse.rs
(+245 files in other folders)
