[workspace]
resolver = "2"
members = [
    "crates/oxillama-gguf",
    "crates/oxillama-quant",
    "crates/oxillama-arch",
    "crates/oxillama-runtime",
    "crates/oxillama-server",
    "crates/oxillama-bench",
    "crates/oxillama-py",
    "crates/oxillama-wasm",
    "crates/oxillama-gpu",
    "crates/oxillama",
    "crates/oxillama-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxillama"
authors = ["COOLJAPAN OU (Team KitaSan)"]
rust-version = "1.86"
homepage = "https://github.com/cool-japan/oxillama"
readme = "README.md"
keywords = ["llm", "inference", "gguf", "llama", "pure-rust"]
categories = ["science", "algorithms", "command-line-utilities"]

[workspace.dependencies]
# ── Internal crates ──
oxillama-gguf = { path = "crates/oxillama-gguf", version = "0.1.0", default-features = false }
oxillama-quant = { path = "crates/oxillama-quant", version = "0.1.0", default-features = false }
oxillama-arch = { path = "crates/oxillama-arch", version = "0.1.0" }
oxillama-runtime = { path = "crates/oxillama-runtime", version = "0.1.0", default-features = false }
oxillama-server = { path = "crates/oxillama-server", version = "0.1.0" }
oxillama-bench = { path = "crates/oxillama-bench", version = "0.1.0" }
oxillama-py = { path = "crates/oxillama-py", version = "0.1.0" }
oxillama-wasm = { path = "crates/oxillama-wasm", version = "0.1.0" }
oxillama-gpu = { path = "crates/oxillama-gpu", version = "0.1.0", default-features = false }
oxillama = { path = "crates/oxillama", version = "0.1.0", default-features = false }
oxillama-cli = { path = "crates/oxillama-cli", version = "0.1.0" }

# ── COOLJAPAN Ecosystem (Pure Rust Policy) ──
scirs2-core = { version = "0.4.2", default-features = false }
scirs2-linalg = { version = "0.4.2", default-features = false }
scirs2-neural = { version = "0.4.2", default-features = false }
oxiblas = "0.2.1"
oxifft = "0.2.0"

# ── Error handling ──
thiserror = "2.0.18"
anyhow = "1.0.102"

# ── Observability ──
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# ── Serialization ──
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ── Async runtime ──
tokio = { version = "1.52.0", features = ["full"] }
tokio-stream = "0.1.18"

# ── HTTP server ──
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "limit", "trace"] }

# ── CLI ──
clap = { version = "4.6.0", features = ["derive"] }

# ── Binary / memory / numerics ──
memmap2 = "0.9.10"
half = { version = "2.7.1", features = ["serde"] }
blake3 = "1.8.4"

# ── Parallelism ──
rayon = "1.12.0"

# ── Tokenizer ──
tokenizers = { version = "0.22.2", default-features = false }

# ── Python / WASM bindings ──
pyo3 = { version = "0.28", features = ["abi3-py38"] }
numpy = { version = "0.28.0", default-features = false }
wasm-bindgen = "0.2.118"
js-sys = "0.3.95"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"

# ── Benchmarking (dev) ──
criterion = { version = "0.8.2", features = ["html_reports"] }



[profile.release]
lto = true
codegen-units = 1
opt-level = 3
