[workspace]
resolver = "2"
members = [
    "crates/oxillama-gguf",
    "crates/oxillama-quant",
    "crates/oxillama-arch",
    "crates/oxillama-runtime",
    "crates/oxillama-server",
    "crates/oxillama-bench",
    "crates/oxillama-py",
    "crates/oxillama-wasm",
    "crates/oxillama-gpu",
    "crates/oxillama",
    "crates/oxillama-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxillama"
authors = ["COOLJAPAN OU (Team KitaSan)"]
rust-version = "1.86"
homepage = "https://github.com/cool-japan/oxillama"
readme = "README.md"
keywords = ["llm", "inference", "gguf", "llama", "pure-rust"]
categories = ["science", "algorithms", "command-line-utilities"]

[workspace.dependencies]
# ── Internal crates ──
oxillama-gguf = { path = "crates/oxillama-gguf", version = "0.1.2", default-features = false }
oxillama-quant = { path = "crates/oxillama-quant", version = "0.1.2", default-features = false }
oxillama-arch = { path = "crates/oxillama-arch", version = "0.1.2" }
oxillama-runtime = { path = "crates/oxillama-runtime", version = "0.1.2", default-features = false }
oxillama-server = { path = "crates/oxillama-server", version = "0.1.2" }
oxillama-bench = { path = "crates/oxillama-bench", version = "0.1.2" }
oxillama-py = { path = "crates/oxillama-py", version = "0.1.2" }
oxillama-wasm = { path = "crates/oxillama-wasm", version = "0.1.2" }
oxillama-gpu = { path = "crates/oxillama-gpu", version = "0.1.2", default-features = false }
oxillama = { path = "crates/oxillama", version = "0.1.2", default-features = false }
oxillama-cli = { path = "crates/oxillama-cli", version = "0.1.2" }

# ── COOLJAPAN Ecosystem (Pure Rust Policy) ──
scirs2-core = { version = "0.4.2", default-features = false }
scirs2-linalg = { version = "0.4.2", default-features = false }
scirs2-neural = { version = "0.4.2", default-features = false }
oxiblas = "0.2.1"
oxifft = "0.3"

# ── Error handling ──
thiserror = "2.0.18"
anyhow = "1.0.102"

# ── Observability ──
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# ── Serialization ──
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
oxicode = { version = "0.2.1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# ── Async runtime ──
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["full"] }

# ── HTTP server ──
axum = { version = "0.8.9", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "limit", "trace"] }

# ── CLI ──
clap = { version = "4.6.1", features = ["derive", "env"] }
colored = "3"
indicatif = "0.18"
rustyline = "18.0.0"
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
dirs = "6.0.0"
toml = "1.1.2"

# ── Binary / memory / numerics ──
memmap2 = "0.9.10"
half = { version = "2.7.1", features = ["serde"] }
blake3 = "1.8.5"

# ── Parallelism ──
rayon = "1.12.0"

# ── Tokenizer ──
tokenizers = { version = "0.22.2", default-features = false }

# ── HuggingFace Hub ──
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }

# ── TUI ──
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# ── Python / WASM bindings ──
pyo3 = { version = "0.28", features = ["abi3-py38"] }
numpy = { version = "0.28.0", default-features = false }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
js-sys = "0.3.95"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
wasm-streams = "0.5.0"

# ── Temp files / atomic writes ──
tempfile = "3.27.0"

# ── Crypto ──
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
hmac = "0.12.1"
rsa = { version = "0.9.10", default-features = false, features = ["std", "pem", "sha2"] }
base64 = "0.22.1"
rand = "0.8.6"

# ── Platform directories ──
directories = "5.0.1"

# ── GPU / WebGPU ──
wgpu = "29.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
naga = { version = "29.0.1", features = ["wgsl-in", "msl-out", "spv-out"] }

# ── Benchmarking (dev) ──
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
sysinfo = "0.38.4"
tabled = "0.20.0"



[profile.release]
lto = true
codegen-units = 1
opt-level = 3
