[package]
name = "oxillama-arch"
description = "Model architecture implementations — LLaMA, Qwen3, Mistral, Gemma, Phi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["llama", "transformer", "neural-network", "llm", "inference"]
categories = ["science", "algorithms"]
readme = "README.md"

[features]
default = ["llama", "qwen3", "mistral", "gemma", "phi", "command-r", "starcoder", "llava", "llava16", "falcon", "minicpm", "olmo2", "granite", "deepseek", "dbrx", "grok", "mamba2", "jamba", "qwen2-vl", "mixtral", "stablelm", "gptneox", "bloom", "phimoe"]
llama = []
qwen3 = []
mistral = []
gemma = []
phi = []
command-r = []
starcoder = []
llava = ["llama"]
llava16 = ["llava"]
falcon = []
minicpm = []
olmo2 = []
granite = []
deepseek = []
dbrx = []
grok = []
mamba2 = []
jamba = ["mamba2"]
qwen2-vl = []
mixtral = []
stablelm = []
gptneox = []
bloom = []
phimoe = []
reference-f32 = []

[dependencies]
oxillama-gguf = { workspace = true, features = ["std"] }
oxillama-quant.workspace = true
half.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
oxillama-gguf = { workspace = true, features = ["test-utils"] }
proptest.workspace = true
