[package]
name = "oxillama-bench"
description = "Benchmark suite for OxiLLaMa inference engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["benchmark", "llm", "quantization", "performance", "inference"]
categories = ["development-tools::profiling"]
readme = "README.md"

[dependencies]
oxillama-quant = { workspace = true, features = ["parallel"] }
oxillama-gguf = { workspace = true, features = ["mmap"] }
anyhow.workspace = true
criterion.workspace = true
half.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
sysinfo = { workspace = true }
tabled = { workspace = true }

[[bench]]
name = "batch_heatmap"
harness = false

[[bench]]
name = "cross_simd"
harness = false

[[bench]]
name = "dispatch_matrix"
harness = false

[[bench]]
name = "kv_cache"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "memory_profile"
harness = false

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "power"
harness = false

[[bench]]
name = "speculative"
harness = false

