[package]
name = "oxillama-gguf"
description = "GGUF v3 parser and tensor loader for OxiLLaMa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["gguf", "llm", "model-format", "quantization", "inference"]
categories = ["parser-implementations", "encoding", "data-structures"]
readme = "README.md"

[features]
default = ["std", "mmap"]
std = []
alloc = []
mmap = ["dep:memmap2", "std"]
test-utils = ["std"]
integrity = ["std"]
validate = ["integrity"]

[dependencies]
thiserror.workspace = true
memmap2 = { workspace = true, optional = true }
blake3.workspace = true
oxicode.workspace = true
half.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
