[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "oxillama"
requires-python = ">=3.8"
description = "Python bindings for OxiLLaMa — Pure Rust LLM inference engine"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "oxillama_py"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
