[package]
name = "oxillama-runtime"
description = "Inference engine — KV cache, sampling, tokenizer bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["llm", "inference", "llama", "transformer", "sampling"]
categories = ["science", "algorithms"]
readme = "README.md"

[features]
default = ["llama", "qwen3", "mistral", "gemma", "phi", "command-r", "starcoder", "tokenizer-wasm", "parallel", "native-async", "mmap", "offload"]
llama = ["oxillama-arch/llama"]
qwen3 = ["oxillama-arch/qwen3"]
mistral = ["oxillama-arch/mistral"]
gemma = ["oxillama-arch/gemma"]
phi = ["oxillama-arch/phi"]
command-r = ["oxillama-arch/command-r"]
starcoder = ["oxillama-arch/starcoder"]
tokenizer-onig = ["dep:tokenizers", "tokenizers/onig"]
tokenizer-wasm = ["dep:tokenizers", "tokenizers/unstable_wasm"]
parallel = ["dep:rayon", "oxillama-quant/parallel"]
native-async = ["dep:tokio", "dep:tokio-util"]
mmap = ["oxillama-gguf/mmap", "dep:memmap2"]
offload = []

[dependencies]
oxillama-gguf = { workspace = true }
oxillama-quant = { workspace = true }
oxillama-arch.workspace = true
half.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true, default-features = false }
memmap2 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
oxicode.workspace = true
blake3.workspace = true

[dev-dependencies]
criterion.workspace = true
oxillama-gguf = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true

[[bench]]
name = "sampling"
harness = false
